--- a/Tickets/src/App.css
+++ b/Tickets/src/App.css
@@ -1,36 +1,32 @@
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  
+@import "tailwindcss/base";
+
+@import "tailwindcss/components";
+
+@import "tailwindcss/utilities";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Manrope", sans-serif;
 }
+
 html
 {
-  margin: 0;
   height: 100vh;
-  background: linear-gradient(to right top, #020947, #04052e, #1f2399, #100c3e, #120063);
-  text-align: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
-  display: flex; /* Use flexbox for alignment */
-  justify-content: center; /* Center horizontally */
+  background: #11212D;
 }
-.login-form
+.login-form 
 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px 40px;
-  color: white;
-  background: rgba(0, 0, 0, 0.8);
+  padding: 50px 20px;
+  color : white;
+  background: #06141B;
   border-radius: 10px;
-  box-shadow: 0 0.4px 0.4px rgba(128, 128, 128, 0.109),
-    0 1px 1px rgba(128, 128, 128, 0.155),
-    0 2.1px 2.1px rgba(128, 128, 128, 0.195),
-    0 4.4px 4.4px rgba(128, 128, 128, 0.241),
-    0 12px 12px rgba(128, 128, 128, 0.35);
-
 }
+
 .multiple-choice-login{
   display: flex;
   flex-direction: column;
@@ -50,14 +46,10 @@ h1{
   --input-border-bottom-color: white;
   
   input {
-    color: white;
+    color: black;
   }
 }
 
-
-
-
-/* CSS */
 .button-login {
   padding: 0.6em 2em;
   border: none;
@@ -128,133 +120,17 @@ h1{
 }
 
 .small-image {
-  width: 150px; /* Adjust the width as needed */
-  height: auto; /* Maintain aspect ratio */
-  border-radius: 100px; /* Rounded corners */
+  /* width: 150px; 
+  height: auto; 
+  border-radius: 100px; 
   display: flex;
   position: absolute;
   top: 8px;
   left: 16px;
-  font-size: 18px;
-
+  font-size: 18px; */
 }
 
-
-.title h1 {
-  text-align:center; font-size:50px; text-transform:uppercase; color:#fefefe; letter-spacing:1px;
-  font-family:"Playfair Display", serif; font-weight:400;
-}
-.title h1 span {
-  margin-top: 5px;
-    font-size:15px; color:#fefefe; word-spacing:1px; font-weight:normal; letter-spacing:2px;
-    text-transform: uppercase; font-family:"Raleway", sans-serif; font-weight:500;
-
-    display: grid;
-    grid-template-columns: 1fr max-content 1fr;
-    grid-template-rows: 27px 0;
-    grid-gap: 20px;
-    align-items: center;
-}
-
-.title h1 span:after,.title h1 span:before {
-    content: " ";
-    display: block;
-    border-bottom: 1px solid #ccc;
-    border-top: 1px solid #ccc;
-    height: 5px;
-  background-color:#f8f8f8;
-}
-
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-
-.navMenu {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-.navMenu a {
-  color: #f6f4e6;
-  text-decoration: none;
-  font-size: 1.2em;
-  text-transform: uppercase;
-  font-weight: 500;
-  display: inline-block;
-  width: 80px;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
-.navMenu a:hover {
-  color: #00aaff;
-}
-
-.navMenu .dot {
-  width: 6px;
-  height: 6px;
-  background: #00aaff;
-  border-radius: 50%;
-  opacity: 0;
-  -webkit-transform: translateX(30px);
-  transform: translateX(30px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-
-.navMenu a:nth-child(1):hover ~ .dot {
-  -webkit-transform: translateX(30px);
-  transform: translateX(30px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  opacity: 1;
-}
-
-.navMenu a:nth-child(2):hover ~ .dot {
-  -webkit-transform: translateX(110px);
-  transform: translateX(110px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  opacity: 1;
-}
-
-.navMenu a:nth-child(3):hover ~ .dot {
-  -webkit-transform: translateX(200px);
-  transform: translateX(200px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  opacity: 1;
-}
-
-.navMenu a:nth-child(4):hover ~ .dot {
-  -webkit-transform: translateX(285px);
-  transform: translateX(285px);
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  opacity: 1;
-}
-.navMenu
-{
-  position: fixed; /* Change from 'absolute' to 'fixed' */
-  top: 0; /* Position at the top of the page */
-  left: 50%;
-  transform: translateX(-50%);
-}
-body {
-  display: flex;
-  justify-content:center;
-  align-items: center;
-  height: 100vh;
-}
-
+/* Here lies the main page animation */
 .trainAnimation {
   position: relative;
 }
@@ -513,6 +389,8 @@ body {
   left:150px;
   box-shadow: -70px 30px #fff,-40px -10px #fff,-20px -20px #fff, 34px -10px #fff,50px -30px #fff, -30px 23px #fff, 95px -10px #fff, 120px -15px #fff, 140px 20px #fff, 155px 30px #fff;
 }
+
+/* Here it ends the main animation */
 
 
 
